# MartiniSoup

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  cli.rst  conf.py  index.rst  installation.rst
docs/programs/: binding-frequency.rst  metabolite-partitioning.rst  msd.rst  protein-clustering.rst  protein-rdf.rst  residence.rst
src/: __init__.py  analysis.py  cli.py  cli_contacts.py  contact.py  data_structures.py  models.py  trajectory.py  utils.py
src/analysis/: __init__.py  histogram.py  models.py
src/cytosol_analysis/: contact.py  data_structures.py  trajectory.py
src/cytosol_analysis/analysis/: analysis.py
src/cytosol_analysis/scripts/: contacts.py  lifetimes.py
src/martinisoup/: __init__.py  cli.py  clustering.py  contact.py  data_structures.py  database.py  metabolite_clustering.py  metabolite_partitioning.py  msd.py  parallel.py  protein_clustering.py  protein_rdf.py  residence_tracker.py  trajectory.py
src/martinisoup/analysis/: analysis.py  survival.py
src/martinisoup/scripts/: binding_frequency.py  metabolite_clustering.py  metabolite_partitioning.py  msd.py  msd_fitter.py  protein_clustering.py  protein_rdf.py  residence_fitter.py  residence_times.py
tests/: test_contact.py  test_data_structures.py  test_parallel.py  test_residence_tracker.py  test_utils.py
