[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytosol_analysis"
version = "0.1.0"
description = "Tools for metabolite-protein residence time analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "lmfit",
    "MDAnalysis",
    "tqdm",
    "scipy",
    "freud-analysis"
]

[project.scripts]
contacts = "cytosol_analysis.scripts.contacts:main"
lifetimes = "cytosol_analysis.scripts.lifetimes:main"
